2011-03-22 Alexander Malysh <amalysh at kannel.org>
    * debian/kannel-cvs.init, debian/kannel-devel.init, debian/kannel.init: added status
      command.
      Thanks to Konstantin Vayner <poncha at appcell.net> for this patch.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * test/test_http_server.c: don't do anythink that use threading in signal handler.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: fixed alt-charset issue that we try to reencode even
      binary and UCS2 data.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: added new method.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: indents.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: Comparing a va_list with NULL is bogus. It's supposed to be treated like
      an opaque type and only be manipulated with va_* accessors. This fixes #587.

2011-03-12  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: reverting back last commit due to veto if Alex. Need
      further investigation.
    
2011-03-11  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: ensure we handle 'alt-charset' correctly, in case 
      we get DC_UCS2 coding in the payload.
      [Message-Id: <4D76BF9C.7070700@tolj.org>]

2011-03-09 Alexander Malysh <amalysh at kannel.org>
    * applied patch that adds sqlite3 DB and DLR support. This patch was originally
      contributed by David Butler, posted 2009-11-23 to the list, with Msg-ID
      <22DE7AAC95BA4B5A9EEF3FEC90222162@VAIO>. Stipe added userguide parts and
      fixed destination number prefix handling.

2011-03-08 Alexander Malysh <amalysh at kannel.org>
    * gwlib/list.c: applied patch which fixes a rare memory leak.
      When the destroy is called, it extracts until a NULL is found, which may
      not necessarily be the last item in the list as gwlist allows you to add
      NULL items to it.